--- a/Projeto IA - Redes Neurais para Classificação de Cancer de Mama.ipynb
+++ b/Projeto IA - Redes Neurais para Classificação de Cancer de Mama.ipynb
@@ -331,6 +331,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found:\n",
+      " {'activation': 'relu', 'alpha': 0.0001, 'hidden_layer_sizes': (50, 50, 50), 'learning_rate': 'adaptive', 'solver': 'adam'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "y = df['diagnosis']\n",
+    "X = df.drop(['diagnosis'], axis=1)\n",
+    "\n",
+    "mlp = MLPClassifier(max_iter=100)\n",
+    "parameter_space = {\n",
+    "    'hidden_layer_sizes': [(50,50,50), (50,100,50), (100,)],\n",
+    "    'activation': ['tanh', 'relu'],\n",
+    "    'solver': ['sgd', 'adam'],\n",
+    "    'alpha': [0.0001, 0.05],\n",
+    "    'learning_rate': ['constant','adaptive'],\n",
+    "}\n",
+    "clf = GridSearchCV(mlp, parameter_space, n_jobs=-1, cv=3)\n",
+    "clf.fit(X, y)\n",
+    "print('Melhores parametros achados em:\\n', clf.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -371,6 +405,7 @@
     "\n",
     "y = df['diagnosis']\n",
     "X = df.drop(['diagnosis'], axis=1)\n",
+    "\n",
     "clf = MLPClassifier(hidden_layer_sizes=(100,100,100), max_iter=500, alpha=0.0001,\n",
     "                     solver='sgd', verbose=10,  random_state=21,tol=0.000000001)\n",
     "\n",
