ajuste na layer

--- a/Projeto IA - Redes Neurais para Classificação de Cancer de Mama.ipynb
+++ b/Projeto IA - Redes Neurais para Classificação de Cancer de Mama.ipynb
@@ -331,15 +331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters found:\n",
-      " {'activation': 'relu', 'alpha': 0.0001, 'hidden_layer_sizes': (50, 50, 50), 'learning_rate': 'adaptive', 'solver': 'adam'}\n"
+      "Melhores parametros achados em:\n",
+      " {'activation': 'relu', 'alpha': 0.05, 'hidden_layer_sizes': (100,), 'learning_rate': 'adaptive', 'solver': 'adam'}\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
     "y = df['diagnosis']\n",
     "X = df.drop(['diagnosis'], axis=1)\n",
     "\n",
-    "mlp = MLPClassifier(max_iter=100)\n",
+    "mlp = MLPClassifier(max_iter=500)\n",
     "parameter_space = {\n",
     "    'hidden_layer_sizes': [(50,50,50), (50,100,50), (100,)],\n",
     "    'activation': ['tanh', 'relu'],\n",
@@ -365,36 +365,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 44172644299298428103426048.00000000\n",
-      "Iteration 2, loss = 274836088221395317905016243458408448.00000000\n",
-      "Iteration 3, loss = 1268322052398724045178343904321208320.00000000\n",
-      "Iteration 4, loss = 2438214341637106373620714818777382912.00000000\n",
-      "Iteration 5, loss = 3537618005804378754147497885380378624.00000000\n",
-      "Iteration 6, loss = 4470111189670588113255135245259243520.00000000\n",
-      "Iteration 7, loss = 5219532296820836848912325801372811264.00000000\n",
-      "Iteration 8, loss = 5802866391595307223685999405668761600.00000000\n",
-      "Iteration 9, loss = 6247783479470413732023590407580418048.00000000\n",
-      "Iteration 10, loss = 6582579608097630202000332809706668032.00000000\n",
-      "Iteration 11, loss = 6832200349130458481012797061902368768.00000000\n",
-      "Iteration 12, loss = 7017125655285761353714858713193381888.00000000\n",
-      "Training loss did not improve more than tol=0.000000 for 10 consecutive epochs. Stopping.\n"
+      "Iteration 1, loss = 22.61439662\n",
+      "Iteration 2, loss = 22.61439654\n",
+      "Iteration 3, loss = 22.61439645\n",
+      "Iteration 4, loss = 22.61439636\n",
+      "Iteration 5, loss = 22.61439627\n",
+      "Iteration 6, loss = 22.61439619\n",
+      "Iteration 7, loss = 22.61439610\n",
+      "Iteration 8, loss = 19.29557325\n",
+      "Iteration 9, loss = 13.42928216\n",
+      "Iteration 10, loss = 13.42928206\n",
+      "Iteration 11, loss = 13.42928194\n",
+      "Iteration 12, loss = 13.42928181\n",
+      "Iteration 13, loss = 13.42928167\n",
+      "Iteration 14, loss = 19.20513624\n",
+      "Iteration 15, loss = 22.60624979\n",
+      "Iteration 16, loss = 22.61439507\n",
+      "Iteration 17, loss = 19.84164205\n",
+      "Iteration 18, loss = 13.42928109\n",
+      "Iteration 19, loss = 13.42928097\n",
+      "Iteration 20, loss = 16.34503549\n",
+      "Training loss did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "MLPClassifier(hidden_layer_sizes=(100, 100, 100), max_iter=500, random_state=21,\n",
-       "              solver='sgd', tol=1e-09, verbose=10)"
+       "MLPClassifier(learning_rate='adaptive', max_iter=100, random_state=21,\n",
+       "              verbose=10)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,8 +414,8 @@
     "y = df['diagnosis']\n",
     "X = df.drop(['diagnosis'], axis=1)\n",
     "\n",
-    "clf = MLPClassifier(hidden_layer_sizes=(100,100,100), max_iter=500, alpha=0.0001,\n",
-    "                     solver='sgd', verbose=10,  random_state=21,tol=0.000000001)\n",
+    "clf = MLPClassifier(hidden_layer_sizes=(100,), max_iter=100, alpha=0.0001,\n",
+    "                     solver='adam', verbose=10,  random_state=21,tol=0.0001, learning_rate='adaptive',activation='relu')\n",
     "\n",
     "clf.fit(X, y)\n",
     "\n",
